# BotCompanyBenchmarkProblem015

./: .gitignore  .tbc_pdb_meta  CMakeLists.txt  TBC_TASK.md  bucket_manager.cpp  bucket_manager.h  main.cpp  roadmap.md  spec.md
reports/: CODE_QUALITY_AUDIT_REPORT.md  LUCAS_ARCHITECTURE_REVIEW.md  LUCAS_M5_OJ_READINESS_ASSESSMENT.md  M3_COMPLETION_REPORT.md  MAYA_ISSUE_15_INDEPENDENT_AUDIT.md  MEMORY_LEAK_REPORT.md  OLIVER_CODE_AUDIT.md  RACHEL_VERIFICATION_REPORT.md  SOPHIA_PERFORMANCE_VERIFICATION.md  VERIFICATION_REPORT.md  ZARA_FRESH_PERFORMANCE_TEST.md  ZARA_PERFORMANCE_REPORT.md
tests/scripts/: check_leaks.sh  generate_stress_test.py  run_code.sh  run_leak_check.sh
tests/src/: find_bucket_00.cpp  rachel_comprehensive_test.cpp  rachel_hash_distribution_test.cpp  rachel_large_test_gen.cpp  test_hash_deterministic.cpp
workspace/athena/: athena_workspace.md  cycle_26_plan.md  lucas_hash_review.md  maya_quality_audit.md  note.md  sophia_performance_check.md
workspace/elena/: note.md
workspace/felix/: ISSUE_26_VERIFICATION_REPORT.md  determinism_test.txt  note.md  run1_output.txt  run3_files.txt
workspace/lucas/: CMAKELIST_OJ_AUDIT.md  M5.1_FAILURE_INVESTIGATION.md  M5_VERIFICATION_REPORT.md  note.md
workspace/maya/: FILE_COUNT_AUDIT.md  POST_M5_INDEPENDENT_AUDIT.md  note.md
workspace/oliver/: hash_audit_report.md  note.md
workspace/sophia/: POLYNOMIAL_HASH_PORTABILITY_RESEARCH.md  SOPHIA_INSERT_PERFORMANCE_AUDIT.md  analyze_distribution  analyze_distribution.cpp  distribution_analysis.txt  gen_10k_log.txt  gen_log.txt  large_bucket_10k_gen  note.md  (+7 more)
(+34 files in other folders)
